# NELU

./: .dstackignore  .env.example  .gitignore  CITATION.cff  README.md  cifar10.sh  pyproject.toml  run_h100.sh
.dstack/: fleet-dryrun.dstack.yml  fleet-h100.dstack.yml  profiles.yml  server-config.example.yml  volume-dryrun.dstack.yml  worker-dryrun.dstack.yml  worker.dstack.yml
NELU__Normalized_Gaussian_Error_Linear_Units/: neurips_2026.tex  references.bib
configs/: cifar100.yaml
docs/: method.md  reproducing.md  training.md
eval/: __init__.py  cifar_robustness.py  eval_adversarial.py  eval_imagenet_c.py  eval_robustness.py  imagenet_robustness.py
experiments/: ablation_full.py  ablation_gamma_mode.py  ablation_mobilenetv2_rms_axis.py  benchmark_overhead.py  eval_imagenet_c.py  eval_ood.py  eval_timm_pretrained.py  fig1_direction_field.py  fig1_final.py  fig1_geometry_2d.py  fig1_pca_arrows.py  fig1_quick.py  fig1_render_all.py  fig1_shape_and_grad.py  fig1_sweep_extent.py  fig1_teaser.py  fig2_nelu_analysis.py  fig2_scale_dep.py  fig3_nelu_normalized.py  fig_supp_rms_variants.py  fig_supp_scale_variance.py  gate_pattern_analysis.py  main_cifar_tinyimagenet.py  tiny_lm_gluvariants.py  tmp_nosg_ablation.py  train_coco_maskrcnn.py  train_imagenet.py  train_imagenet_timm.py  train_lm.py
gate_norm/: __init__.py  activations.py  affine.py  core.py  cuda.py  dispatch.py  functional.py  glu.py  layout.py  ln_beta.py  logging.py  reduction.py  resact.py  scheduler.py  stats.py  xln.py
nelu/: __init__.py  activations.py  cuda_kernel.py  cuda_kernel_sg.py  cuda_kernel_surr.py  diagnostics.py  glu.py  nilu_cuda_kernel.py  nilu_cuda_kernel_sg.py  reduction_layout.py
patches/: README.md  convnext-train.patch  deit-train.patch
scripts/: aws_spot_train.sh  bootstrap.sh  bootstrap_instance.sh  check_deit_log.py  download_data.sh  eval_cifar_cka.sh  eval_cifar_repr.sh  eval_cifar_repr_sweep.sh  eval_orchestrate.sh  install_cuda.sh  jobs_node1.txt  jobs_node2.txt  jobs_node3.txt  launch_12.sh  run_all.sh  (+23 more)
(+118 files in other folders)
