[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-normalization"
version = "0.1.0"
description = "Scale-Invariant Self-Gated Activations (Gate Normalization)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Anonymous" }]
keywords = ["pytorch", "activation-functions", "imagenet", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
]

[project.optional-dependencies]
train = [
    "timm>=1.0.11",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "numpy>=1.24",
]
medmnist = [
    "medmnist>=3.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/anonymous/gate-normalization"
Repository = "https://github.com/anonymous/gate-normalization"

[tool.setuptools.packages.find]
where = ["."]
include = ["gate_norm*", "train*"]
exclude = ["tests*", "third_party*", "docs*"]

# Ship the CUDA source files alongside the Python package so the lazy
# torch.utils.cpp_extension.load() inside gate_norm.cuda can find them
# in installed environments (sdist / wheel / `pip install -e .`).
[tool.setuptools.package-data]
"gate_norm" = ["csrc/*.cu", "csrc/*.cuh"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
